fixed mass unit purchase despite factory/starport too low starting base now gets base name fixed attack logic more Math.Max 0 to ensure positivity fixed ui after sending/receiving attacks

--- a/maxhanna.client/src/app/nexus-bases/nexus-bases.component.css
+++ b/maxhanna.client/src/app/nexus-bases/nexus-bases.component.css
@@ -87,3 +87,7 @@ tbody {
 .blueText{
     color: var(--secondary-font-color);
 }
+.reorderNote {
+  color: var(--secondary-font-color);
+  font-style: italic;
+}
