--- a/maxhanna.client/src/app/nexus-map/nexus-map.component.css
+++ b/maxhanna.client/src/app/nexus-map/nexus-map.component.css
@@ -273,3 +273,9 @@
   text-align: center;
   z-index: 5;
 }
+
+.cancelAttackSpan {
+  cursor: pointer;
+  color: var(--main-font-color);
+  font-size: xx-small;
+}
